--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
-    "node": "10.15.3"
+    "node": "14.x"
   },
   "author": "",
   "license": "ISC",
